<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SASPortalLoginActivity">

    <EditText
        android:id="@+id/sas_portal_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="168dp"
        android:autofillHints="Username"
        android:ems="10"
        android:hint="@string/portal_username_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sas_portal_username_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/sas_portal_username_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#474646"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/sas_portal_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sas_portal_username" />

    <EditText
        android:id="@+id/sas_portal_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/portal_password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sas_portal_username" />

    <TextView
        android:id="@+id/portal_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/sas_portal_password_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#474646"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/sas_portal_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/sas_portal_password" />

    <Button
        android:id="@+id/button_login_sas_portal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="getPortalLoginInfo"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sas_portal_password" />
</androidx.constraintlayout.widget.ConstraintLayout>